added admin panel

--- a/tp/package.json
+++ b/tp/package.json
@@ -19,7 +19,12 @@
   "dependencies": {
     "better-sqlite3": "^11.1.2",
     "dotenv": "^16.4.5",
+    "ejs": "^4.0.1",
+    "express": "^5.2.1",
+    "express-session": "^1.18.2",
     "google-sr": "^6.0.0",
+    "method-override": "^3.0.0",
+    "nodemailer": "^7.0.12",
     "playwright": "^1.45.1",
     "playwright-extra": "^4.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
